# OpenShell

./: .gitignore  AGENTS.md  CI.md  CONTRIBUTING.md  Cargo.toml  README.md  dco-signatures.json  mise.toml  pyproject.toml  snapcraft.yaml
.github/: VOUCHED.td
.github/workflows/: branch-checks.yml  branch-docs.yml  branch-e2e.yml  ci-image.yml  deb-package.yml  docker-build.yml  driver-vm-linux.yml  driver-vm-macos.yml  e2e-gpu-test.yaml  e2e-kubernetes-test.yml  e2e-test.yml  helm-lint.yml  publish-docs-website.yml  release-auto-tag.yml  release-canary.yml  release-dev.yml  release-tag.yml  release-vm-kernel.yml  required-ci-gates.yml  rpm-package.yml  rust-cache-seed.yml  rust-native-build.yml  snap-package.yml  sync-docs.yml
architecture/: README.md  build-containers.md  build.md  custom-vm-runtime.md  gateway-single-node.md  gateway.md  sandbox.md  security-policy.md
crates/openshell-gateway-interceptors/: Cargo.toml
crates/openshell-gateway-interceptors/src/: lib.rs  plan.rs  profile_source.rs  proto_json.rs  routes.rs  runtime.rs
crates/openshell-server/: Cargo.toml
crates/openshell-vm/: Cargo.toml
crates/openshell-vm/runtime/: README.md  build-custom-libkrunfw.sh
crates/openshell-vm/runtime/kernel/: bridge-cni.config
crates/openshell-vm/scripts/: api-proxy.py  build-rootfs.sh  hello-server.py  openshell-vm-init.sh
crates/openshell-vm/src/: exec.rs  ffi.rs  lib.rs  main.rs
crates/openshell-vm/tests/: gateway_integration.rs
deploy/gateway/: vm-init.sh
deploy/man/: openshell.1.md
docs/: conf.py  index.md
docs/about/: how-it-works.md  index.md  installation.mdx  release-notes.md  support-matrix.md
docs/clusters/: index.md  remote-deploy.md
docs/gator/: index.md
docs/get-started/: first-sandbox.md  index.md  installation.md
docs/inference/: configure.md  connect-sandboxes.md  create-routes.md  index.md  manage-routes.md
docs/observability/: health.md  index.md  logs.md
docs/reference/: architecture.md  cli.md  environment-variables.md  gateway-config.mdx  index.md  policy-schema.md  support-matrix.md
docs/resources/: index.md
docs/safety-and-privacy/: index.md  network-access-rules.md  policies.md  security-model.md
docs/sandboxes/: community-sandboxes.md  create-and-manage.md  custom-containers.md  file-sync.md  index.md  manage-sandboxes.mdx  policies.md  port-forwarding.md  providers-v2.mdx  providers.md  terminal.md
docs/security/: index.md  network-access.md  policies.md
docs/troubleshooting/: cluster-issues.md  index.md  provider-issues.md  sandbox-issues.md
docs/tutorials/: github-sandbox.md
examples/governance-interceptor/: Cargo.toml  README.md  policy.yaml  smoke.sh
examples/governance-interceptor/profiles/: github.yaml  slack.yaml
examples/governance-interceptor/src/: main.rs  policy_hash.rs  proto_json.rs  smoke_client.rs  tests.rs
examples/sandbox-policy-quickstart/: demo.sh
pr-preview/pr-215/: searchindex.js
pr-preview/pr-240/: index.json  searchindex.js
pr-preview/pr-259/: index.json
pr-preview/pr-310/: index.html  index.json  (+3 more)
proto/: compute_driver.proto  gateway_interceptor.proto  inference.proto  openshell.proto
scripts/: release.py
tasks/: docker.toml  python.toml  rust.toml  test.toml  vm.toml
(+426 files in other folders)
