# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MicroVM runtime using libkrun for hardware-isolated execution"

[lib]
name = "openshell_vm"
path = "src/lib.rs"

[[bin]]
name = "openshell-vm"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { workspace = true }
libc = "0.2"
libloading = "0.8"
miette = { workspace = true }
nix = { workspace = true }
openshell-bootstrap = { path = "../openshell-bootstrap" }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
