# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "openshell-governance-interceptor-example"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[dependencies]
jsonwebtoken = "9"
openshell-core = { path = "../../crates/openshell-core", default-features = false }
openshell-policy = { path = "../../crates/openshell-policy" }
openshell-providers = { path = "../../crates/openshell-providers" }
prost = "0.14"
prost-reflect = { version = "0.16.5", features = ["serde"] }
prost-types = "0.14"
rcgen = { version = "0.13", features = ["crypto", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sha2 = "0.10"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.14", features = ["transport"] }

[[bin]]
name = "governance-interceptor"
path = "src/main.rs"

[[bin]]
name = "governance-smoke-client"
path = "src/smoke_client.rs"
